--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ code {
 
 body {
   background-image: linear-gradient(to left bottom, #ff7bc6, #f164cb, #de4fd4, #c43fdf, #9f35ec, #8740f3, #6949fa, #3d51ff, #3f61ff, #4670ff, #517efe, #5f8bfb);
+  background-size: cover;
   width: 100%;
   height:100vh;
   letter-spacing: 0.003em;
@@ -58,13 +59,12 @@ h1 {
   font-size: 25px;
 }
 
-
 .circles{
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
