fix: props onChange not working and styling height not full; red and green switch button

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
-html, body, #root{
+body {
+  height: 100%;
+}
+
+html, body {
+  overflow: hidden;
+}
+
+html, #root{
   height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 #root {
